[package]
name = "helix-rs"
version = "0.1.0"
edition = "2025"
description = "Rust SDK for HelixDB"
license = "MIT"
repository = "https://github.com/HelixDB/helix-rs"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] } 