[package]
name = "helix-rs"
version = "0.1.1"
edition = "2024"
description = "Rust SDK for HelixDB"
license = "AGPL-3.0"
repository = "https://github.com/HelixDB/helix-rs"
authors = ["HelixDB Team"]

[dependencies]
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1.46.1", features = ["full"] }

[dev-dependencies]
tokio = { version = "1.46.1", features = ["full", "test-util"] } 