[package]
name = "helix-rs"
version = "0.1.8"
edition = "2024"
description = "Rust SDK for HelixDB"
license = "AGPL-3.0"
repository = "https://github.com/HelixDB/helix-rs"
authors = ["HelixDB Team"]

[dependencies]
helix-macros = "0.1.7"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
anyhow = "1.0.99"
tokio = { version = "1.47.1", features = ["full"] }
thiserror = "2.0.16"

[dev-dependencies]
tokio = { version = "1.46.1", features = ["full", "test-util"] }

[features]
embedded = []
remote = []
default = ["embedded", "remote"]
